hphp/hack/test/typecheck/is_expression/tuple4.php.exp
File "tuple4.php", line 6, characters 14-34:
The "is" operator cannot be used with a function (Typing[4195])
